--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:h2:mem:testdb
 #http://localhost:8080/h2-console/
+
+logging.level.root=debug
