--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
 #http://localhost:8080/h2-console/
 
-logging.level.root=debug
+#logging.level.root=debug
